--- a/Edubin/index.html
+++ b/Edubin/index.html
@@ -290,7 +290,7 @@ class="uppercase text-[14px] sm:font-bold font-normal hover:text-primary sm:mx-0
     <section id="aboutus" class="w-100 bg-bgcolor ">
       <!-- About Us -->
         <div class=" text-darktext bg-lighttext">
-          <div class="sm:mx-[8%] 2xl:mx-[20%] mx-[20px] pt-[300px] ">
+          <div class="sm:mx-[8%] 2xl:mx-[20%] mx-[20px] sm:pt-[300px] pt-24 ">
    <h1 class="text-xl text-darktext font-bold ">About Us</h1>
    <div class="w-[42px] h-[3px] bg-primary my-3"></div>
               <div class="sm:flex block">
@@ -737,7 +737,7 @@ class="uppercase text-[14px] sm:font-bold font-normal hover:text-primary sm:mx-0
       </section>
       <!-- Latest News -->
       <section class="w-100 sm:mx-[8%] 2xl:mx-[20%] mx-[20px]"> 
-        <div class="pt-[100px] pb-[200px]">
+         <div class="pt-[100px] sm:pb-[200px] pb-10">
             <div>
                 <h1 class="text-xl  font-bold ">From the News</h1>
                 <div class="w-[42px] h-[3px] bg-primary my-3"></div>
